[package]
name = "contract-version"
version = "0.0.1"
authors = ["Thiago Machado <thiago@chikai.io>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}
rustc_version = "0.4.0"
