[package]
name = "example-counter"
version = "0.0.1"
authors = ["Thiago Machado <thiago@chikai.io>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.4"
